# corvia

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  corvia.toml  rust-toolchain.toml
.github/workflows/: release.yml
adapters/corvia-adapter-basic/rust/: Cargo.toml  README.md
adapters/corvia-adapter-basic/rust/src/: main.rs
adapters/corvia-adapter-claude-sessions/rust/: Cargo.toml
adapters/corvia-adapter-claude-sessions/rust/src/: correlation.rs  main.rs
bench/canary/: README.md  authoring-trace.md  queries.toml  snapshot.sh  validate.sh
bench/ragas/: README.md  corpus.py  generate.py  providers.py  pyproject.toml  requirements.txt  writer.py
benchmark-results/2026-03-04T04-48-57/: metadata.json  query-1-graph.json  query-1-vector.json  query-2-graph.json  query-2-vector.json  query-3-graph.json  query-3-vector.json  query-4-graph.json  query-4-vector.json  summary.json
benchmark-results/2026-03-04T06-31-15/: metadata.json  query-1-graph.json  query-1-vector.json  query-2-graph.json  query-2-vector.json  query-3-graph.json  query-3-vector.json  query-4-graph.json  query-4-vector.json  summary.json
benchmark-results/2026-03-04T06-59-58/: metadata.json  query-1-graph.json  query-1-vector.json  query-2-graph.json  query-2-vector.json  query-3-graph.json  query-3-vector.json  query-4-graph.json  query-4-vector.json  summary.json
benchmarks/rag-retrieval/: compare.py  eval.py  run-benchmark.sh
crates/corvia-adapter-git/: Cargo.toml
crates/corvia-adapter-git/src/: git.rs  treesitter.rs
crates/corvia-cli/: Cargo.toml  README.md
crates/corvia-cli/src/: hooks.rs  main.rs  mcp.rs  server_client.rs  telemetry.rs  upgrade.rs  workspace.rs
crates/corvia-cli/src/hooks/: agent_check.rs  agent_teams.rs  cleanup.rs  doc_placement.rs  legacy.rs  mod.rs  reminders.rs  session.rs  settings.rs  status.rs
crates/corvia-cli/tests/: mcp_e2e.rs
crates/corvia-common/: Cargo.toml  README.md
crates/corvia-common/src/: agent_types.rs  config.rs  constants.rs  dashboard.rs  errors.rs  events.rs  lib.rs  namespace.rs  types.rs
crates/corvia-core/: Cargo.toml
crates/corvia-core/src/: chunk.rs  config.rs  discover.rs  embed.rs  entry.rs  index.rs  ingest.rs  init.rs  lib.rs  search.rs  tantivy_index.rs  trace.rs  types.rs  write.rs
crates/corvia-core/tests/: integration.rs
crates/corvia-core/tests/common/: mod.rs
crates/corvia-core/tests/fixtures/: decision-storage.md  instruction-setup.md  learning-redb-gotcha.md  reference-api.md
crates/corvia-inference/: Cargo.toml  README.md
crates/corvia-inference/src/: backend.rs  chat_service.rs  embedding_service.rs  main.rs  model_manager.rs  probe.rs
crates/corvia-inference/tests/: chat_e2e_test.rs
crates/corvia-kernel/: Cargo.toml  README.md
crates/corvia-kernel/src/: access_buffer.rs  adapter_discovery.rs  adapter_protocol.rs  agent_coordinator.rs  agent_registry.rs  agent_writer.rs  augmenter.rs  chunking_config_fmt.rs  chunking_fallback.rs  chunking_markdown.rs  chunking_pdf.rs  chunking_pipeline.rs  chunking_strategy.rs  commit_pipeline.rs  context_builder.rs  docker.rs  embedding_pipeline.rs  event_bus.rs  gap_detector.rs  gc_worker.rs  graph_store.rs  grpc_chat.rs  grpc_engine.rs  inference_provisioner.rs  ingest.rs  introspect.rs  knowledge_files.rs  knowledge_store.rs  lib.rs  lite_store.rs  merge_queue.rs  merge_worker.rs  ollama_chat.rs  ollama_engine.rs  ollama_provisioner.rs  ops.rs  postgres_store.rs  process_adapter.rs  rag_pipeline.rs  rag_types.rs  (+11 more)
crates/corvia-kernel/src/pipeline/: core.rs  expander.rs  fusion.rs  mod.rs  registry.rs  searcher.rs
crates/corvia-proto/: Cargo.toml  README.md  build.rs
crates/corvia-server/: Cargo.toml  README.md  build.rs
crates/corvia-server/src/: lib.rs  mcp.rs  rest.rs
crates/corvia-server/src/dashboard/: activity.rs  clustering.rs  coverage.rs  gpu.rs  health.rs  mod.rs  session_watcher.rs  spokes.rs  traces.rs
crates/corvia-telemetry/: Cargo.toml  README.md
crates/corvia-telemetry/src/: dashboard_trace_layer.rs  lib.rs  otel_context_layer.rs  propagation.rs
docker/: docker-compose.yml
docker/spoke/: Dockerfile  spoke-entrypoint.sh
docs/: spoke-credentials.md
docs/brand/: corvia-brand-guide.html
docs/plans/: 2026-02-25-corvia-brainstorm.md  2026-02-27-corvia-v0.2.0-brainstorm.md  2026-02-28-introspect-implementation.md  2026-03-01-m1.2-litestore.md  2026-03-01-m2.1-workspace-devcontainer-design.md  2026-03-02-brand-guideline-design.md  2026-03-02-brand-guideline-impl.md  2026-03-02-grpc-inference-server-design.md  2026-03-02-grpc-inference-server-impl.md  2026-03-02-m3-implementation.md  2026-03-02-m3-temporal-graph-reasoning-design.md  2026-03-02-m3-unified-parallel-implementation.md  2026-03-02-m3.2-rag-pipeline-impl.md  2026-03-02-m3.3-embedding-chunking-impl.md  2026-03-03-adapter-plugin-system-design.md  2026-03-03-adapter-plugin-system.md  2026-03-03-benchmark-script-design.md  2026-03-03-benchmark-script-impl.md  2026-03-03-post2-benchmark-demo-design.md  2026-03-04-m3.4-graph-edge-improvements-impl.md  2026-03-04-m4.2-graph-relation-wiring-fix.md  2026-03-04-m4.5-cuda-toggle-design.md  2026-03-04-m4.5-cuda-toggle-impl.md  store-client-abstraction.md
docs/rfcs/: 2026-02-25-corvia-brainstorm.md  2026-02-25-corvia-design.md  2026-02-27-corvia-v0.2.0-brainstorm.md  2026-02-28-introspect-implementation.md  2026-02-28-m1-implementation.md  2026-03-01-m1.2-litestore.md  2026-03-01-m2-agent-coordination.md  2026-03-01-m2.1-workspace-devcontainer-design.md  2026-03-01-m2.1-workspace-implementation.md  2026-03-02-brand-guideline-design.md  2026-03-02-brand-guideline-impl.md  2026-03-02-grpc-inference-server-design.md  2026-03-02-grpc-inference-server-impl.md  2026-03-02-m3-implementation.md  2026-03-02-m3-temporal-graph-reasoning-design.md  2026-03-02-m3-unified-parallel-implementation.md  2026-03-02-m3.2-rag-pipeline-design.md  2026-03-02-m3.2-rag-pipeline-impl.md  2026-03-03-adapter-plugin-system.md  (+63 more)
scripts/: benchmark-post2.sh
tests/: introspect.toml
(+38 files in other folders)
