[workspace]
resolver = "2"
members = [
    "crates/corvia-common",
    "crates/corvia-kernel",
    "crates/corvia-server",
    "crates/corvia-cli",
    "crates/corvia-proto",
    "crates/corvia-inference",
    "crates/corvia-telemetry",
    "adapters/corvia-adapter-basic/rust",
    "adapters/corvia-adapter-git/rust",
]

[workspace.package]
version = "0.4.3"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/corvia/corvia"
homepage = "https://github.com/corvia/corvia"
rust-version = "1.88"

[workspace.dependencies]
corvia-common = { path = "crates/corvia-common" }
corvia-kernel = { path = "crates/corvia-kernel" }
corvia-server = { path = "crates/corvia-server" }
corvia-proto = { path = "crates/corvia-proto" }
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
thiserror = "2"
corvia-telemetry = { path = "crates/corvia-telemetry" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
