[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/chunzhe10/corvia"
rust-version = "1.86"

[workspace.dependencies]
# Retrieval
tantivy = "0.22"
fastembed = "4"
# ID generation
uuid = { version = "1", features = ["v7"] }

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Storage
redb = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
futures-util = "0.3"
