[package]
name = "corvia-adapter-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Git repository and source code ingestion adapter for Corvia using tree-sitter"
keywords = ["ai-agents", "tree-sitter", "code-analysis", "ingestion", "knowledge-graph"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "corvia_adapter_git"
path = "src/lib.rs"

[[bin]]
name = "corvia-adapter-git"
path = "src/main.rs"

[dependencies]
corvia-common.workspace = true
corvia-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
git2 = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
