[package]
name = "corvia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "CLI for the Corvia organizational reasoning memory system"
keywords = ["ai-agents", "knowledge-graph", "cli", "memory", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "corvia"
path = "src/main.rs"

[dependencies]
corvia-common.workspace = true
corvia-kernel.workspace = true
corvia-telemetry.workspace = true
corvia-adapter-git = { path = "../../adapters/corvia-adapter-git/rust" }
uuid.workspace = true
corvia-server.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tower-http = { version = "0.6", features = ["cors"] }
libc.workspace = true
flate2.workspace = true
arc-swap = "1"
futures-util = "0.3"

[features]
postgres = ["corvia-kernel/postgres"]

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
corvia-proto.workspace = true
tonic = "0.12"
tokio-stream = "0.1"

[[test]]
name = "e2e_test"
path = "../../tests/integration/e2e_test.rs"

[[test]]
name = "agent_e2e_test"
path = "../../tests/integration/agent_e2e_test.rs"

[[test]]
name = "workspace_e2e_test"
path = "../../tests/integration/workspace_e2e_test.rs"

[[test]]
name = "m3_e2e_test"
path = "../../tests/integration/m3_e2e_test.rs"

[[test]]
name = "grpc_inference_test"
path = "../../tests/integration/grpc_inference_test.rs"

[[test]]
name = "rag_e2e_test"
path = "../../tests/integration/rag_e2e_test.rs"
