[package]
name = "corvia-core"
description = "Knowledge storage, retrieval, and embedding engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tantivy.workspace = true
fastembed.workspace = true
redb.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
futures-util.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
tracing-opentelemetry = { workspace = true }
