[package]
name = "corvia-core"
description = "Knowledge storage, retrieval, and embedding engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tantivy.workspace = true
fastembed.workspace = true
redb.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
futures-util.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
# Used only by integration tests to wire a scoped OpenTelemetry subscriber
# via tracing::subscriber::with_default (see tests/integration.rs). Production
# integration lives in corvia-cli::telemetry. Do NOT move to [dependencies]
# unless a non-test corvia-core code path starts using it directly.
tracing-opentelemetry = { workspace = true }
