[package]
name = "corvia-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "corvia-inference"
path = "src/main.rs"

[dependencies]
corvia-common = { workspace = true }
corvia-proto.workspace = true
corvia-telemetry = { workspace = true }
opentelemetry = { workspace = true }
tonic.workspace = true
prost = "0.13"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
fastembed = "5"
# Direct ort dep with EP features — Cargo unifies with fastembed's internal ort.
# CUDA and OpenVINO EPs are runtime-loaded (no toolkit needed at build time).
ort = { version = "=2.0.0-rc.11", features = ["openvino", "cuda"] }
tokio-stream = "0.1"
llama-cpp-2 = "0.1"
llama-cpp-sys-2 = "0.1"
hf-hub = "0.4"
encoding_rs = "0.8.35"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[features]
# CUDA for llama.cpp chat models. Requires CUDA Toolkit (nvcc) at build time.
# Currently blocked: CUDA 12.8 nvcc is incompatible with Debian trixie glibc 2.40+
# headers (C23 'exception' keyword in mathcalls.h). NVIDIA needs to release a fix.
# Workaround: use a Ubuntu-based container or wait for CUDA 12.9+.
# Enable with: cargo build -p corvia-inference --features cuda
default = []
cuda = ["llama-cpp-2/cuda"]
