[package]
name = "corvia-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Knowledge storage, agent coordination, graph, temporal queries, and reasoning engine for Corvia"
keywords = ["ai-agents", "knowledge-graph", "vector-search", "embedded-database", "memory"]
categories = ["database-implementations", "data-structures"]

[dependencies]
corvia-common.workspace = true
corvia-proto.workspace = true
tonic = "0.12"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
surrealdb = { version = "3", features = ["protocol-ws"] }
bollard = "0.19"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
hnsw_rs = "0.3"
redb = "2"
petgraph = "0.7"
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"
