[package]
name = "corvia-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Knowledge storage, agent coordination, graph, temporal queries, and reasoning engine for Corvia"
keywords = ["ai-agents", "knowledge-graph", "vector-search", "embedded-database", "memory"]
categories = ["database-implementations", "data-structures"]

[dependencies]
corvia-common.workspace = true
corvia-proto.workspace = true
corvia-telemetry = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
tonic = "0.12"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
bollard = "0.19"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
hnsw_rs = "0.3"
redb = "2"
petgraph = "0.7"
rayon = "1"
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
libc.workspace = true
dashmap = "6"
pdf-extract = "0.7"
tantivy = "0.22"
pulldown-cmark = "0.12"
glob = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

[features]
default = []
postgres = ["sqlx", "pgvector"]

[dev-dependencies]
tempfile = "3"
