[package]
name = "corvia-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "REST API and MCP JSON-RPC server for the Corvia knowledge system"
keywords = ["ai-agents", "rest-api", "mcp", "json-rpc", "knowledge-graph"]
categories = ["web-programming::http-server", "development-tools"]

[dependencies]
corvia-common.workspace = true
corvia-kernel.workspace = true
corvia-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
rand = "0.8"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
toml = "0.8"
