[package]
name = "corvia-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Telemetry initialization, span constants, and observability utilities for Corvia"

[dependencies]
corvia-common = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }
tracing-appender = { workspace = true }
anyhow.workspace = true
